# appControlSensor

./: CMakeLists.txt  c_cpp_properties.json
include/: app_logic.h  gpio.h  gpio_pins.h  sensor_manager.h  signal_handler.h
src/: CMakeLists.txt  main.cpp
src/application/: app_logic.cpp
src/peripheral_driver/: gpio.cpp
src/sensors/: sensor_manager.cpp
src/signalhandler/: signal_handler.cpp
